- Fixed nav bar text not being aligned on medium screen sizes.

--- a/partials/_navigation.scss
+++ b/partials/_navigation.scss
@@ -18,7 +18,8 @@
     font-size: 1.125rem;
     color: $white;
     font-family: Poppins,sans-serif;
-    padding: 27px 30px 18px;
+    padding-top: 25px;
+    padding-bottom: 18px;
     text-align: center;
     vertical-align: middle;
     text-decoration: none;
