--- a/style.css
+++ b/style.css
@@ -158,7 +158,8 @@
   font-size: 1.125rem;
   color: #fff;
   font-family: Poppins, sans-serif;
-  padding: 27px 30px 18px;
+  padding-top: 25px;
+  padding-bottom: 18px;
   text-align: center;
   vertical-align: middle;
   text-decoration: none;
